// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test CardItem CardItem snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c4 {
  background-color: #6b068a;
  padding: 5px 27px;
  font-size: 16px;
  line-height: 19px;
  color: #ffffff;
  border-radius: 15px;
  font-size: 24px;
  line-height: 28px;
  border: none;
  outline: none;
  cursor: pointer;
}

.c4.login {
  padding: 9px 51px;
}

.c4:disabled {
  opacity: 0.7;
}

.c4:hover {
  background-color: #c913d6;
}

.c4.categories {
  margin-bottom: 12px;
  padding: 4px 12px;
  margin-right: 12px;
}

.c4.cardItem {
  font-size: 16px;
  line-height: 19px;
  padding: 5px 27px;
}

.c4.order {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.goToOrder {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 13px 54px;
  font-weight: 600;
}

.c0 {
  margin: 15px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  margin-left: auto;
  margin-right: auto;
}

.c0 img {
  width: 100%;
  object-fit: contain;
}

.c1 {
  padding: 20px 20px;
}

.c1 h2 {
  font-weight: 600;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 20px;
}

.c1 p {
  margin-bottom: 20px;
  font-size: 20px;
  line-height: 23px;
  font-weight: 600;
}

.c1 p span {
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 button {
  background-color: #6b068a;
  height: 20px;
  width: 20px;
  outline: none;
  border: none;
  border-radius: 5px;
  color: white;
}

.c2 p {
  margin: 0 12px 0 0;
}

.c2 span {
  margin-right: 3px;
  margin-left: 3px;
}

.c3 {
  text-align: right;
}

@media screen and (min-width:768px) {
  .c4.categories {
    padding: 8px 23px;
    margin-right: 24px;
  }
}

@media screen and (min-width:320px) {
  .c0 {
    width: 100%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    width: calc((100% - 4 * 15px) / 2);
  }

  .c0 img {
    height: 226px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    width: calc((100% - 8 * 15px) / 4);
  }

  .c0 img {
    height: 175px;
  }
}

<body>
    <div>
      <li
        class="c0"
      >
        <img
          alt="Noodles with shrimp"
          src="https://www.eatwell101.com/wp-content/uploads/2018/04/Shrimp-Zucchini-Noodles.jpg"
        />
        <div
          class="c1"
        >
          <h2>
            Noodles with shrimp
          </h2>
          <p>
            Price: 
            <span>
               
              25
              $
            </span>
          </p>
          <div
            class="c2"
          >
            <p>
              Amount:
            </p>
            <button
              type="button"
            >
              -
            </button>
            <span
              data-testid="value"
            >
              1
            </span>
            <button
              type="button"
            >
              +
            </button>
          </div>
          <div
            class="c3"
          >
            <button
              class="c4"
              type="button"
            >
              Add
            </button>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": .c4 {
  background-color: #6b068a;
  padding: 5px 27px;
  font-size: 16px;
  line-height: 19px;
  color: #ffffff;
  border-radius: 15px;
  font-size: 24px;
  line-height: 28px;
  border: none;
  outline: none;
  cursor: pointer;
}

.c4.login {
  padding: 9px 51px;
}

.c4:disabled {
  opacity: 0.7;
}

.c4:hover {
  background-color: #c913d6;
}

.c4.categories {
  margin-bottom: 12px;
  padding: 4px 12px;
  margin-right: 12px;
}

.c4.cardItem {
  font-size: 16px;
  line-height: 19px;
  padding: 5px 27px;
}

.c4.order {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.goToOrder {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 13px 54px;
  font-weight: 600;
}

.c0 {
  margin: 15px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  margin-left: auto;
  margin-right: auto;
}

.c0 img {
  width: 100%;
  object-fit: contain;
}

.c1 {
  padding: 20px 20px;
}

.c1 h2 {
  font-weight: 600;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 20px;
}

.c1 p {
  margin-bottom: 20px;
  font-size: 20px;
  line-height: 23px;
  font-weight: 600;
}

.c1 p span {
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 button {
  background-color: #6b068a;
  height: 20px;
  width: 20px;
  outline: none;
  border: none;
  border-radius: 5px;
  color: white;
}

.c2 p {
  margin: 0 12px 0 0;
}

.c2 span {
  margin-right: 3px;
  margin-left: 3px;
}

.c3 {
  text-align: right;
}

@media screen and (min-width:768px) {
  .c4.categories {
    padding: 8px 23px;
    margin-right: 24px;
  }
}

@media screen and (min-width:320px) {
  .c0 {
    width: 100%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    width: calc((100% - 4 * 15px) / 2);
  }

  .c0 img {
    height: 226px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    width: calc((100% - 8 * 15px) / 4);
  }

  .c0 img {
    height: 175px;
  }
}

<div>
    <li
      class="c0"
    >
      <img
        alt="Noodles with shrimp"
        src="https://www.eatwell101.com/wp-content/uploads/2018/04/Shrimp-Zucchini-Noodles.jpg"
      />
      <div
        class="c1"
      >
        <h2>
          Noodles with shrimp
        </h2>
        <p>
          Price: 
          <span>
             
            25
            $
          </span>
        </p>
        <div
          class="c2"
        >
          <p>
            Amount:
          </p>
          <button
            type="button"
          >
            -
          </button>
          <span
            data-testid="value"
          >
            1
          </span>
          <button
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="c3"
        >
          <button
            class="c4"
            type="button"
          >
            Add
          </button>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test CardItem CardItem snapshot with empty data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c4 {
  background-color: #6b068a;
  padding: 5px 27px;
  font-size: 16px;
  line-height: 19px;
  color: #ffffff;
  border-radius: 15px;
  font-size: 24px;
  line-height: 28px;
  border: none;
  outline: none;
  cursor: pointer;
}

.c4.login {
  padding: 9px 51px;
}

.c4:disabled {
  opacity: 0.7;
}

.c4:hover {
  background-color: #c913d6;
}

.c4.categories {
  margin-bottom: 12px;
  padding: 4px 12px;
  margin-right: 12px;
}

.c4.cardItem {
  font-size: 16px;
  line-height: 19px;
  padding: 5px 27px;
}

.c4.order {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.goToOrder {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 13px 54px;
  font-weight: 600;
}

.c0 {
  margin: 15px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  margin-left: auto;
  margin-right: auto;
}

.c0 img {
  width: 100%;
  object-fit: contain;
}

.c1 {
  padding: 20px 20px;
}

.c1 h2 {
  font-weight: 600;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 20px;
}

.c1 p {
  margin-bottom: 20px;
  font-size: 20px;
  line-height: 23px;
  font-weight: 600;
}

.c1 p span {
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 button {
  background-color: #6b068a;
  height: 20px;
  width: 20px;
  outline: none;
  border: none;
  border-radius: 5px;
  color: white;
}

.c2 p {
  margin: 0 12px 0 0;
}

.c2 span {
  margin-right: 3px;
  margin-left: 3px;
}

.c3 {
  text-align: right;
}

@media screen and (min-width:768px) {
  .c4.categories {
    padding: 8px 23px;
    margin-right: 24px;
  }
}

@media screen and (min-width:320px) {
  .c0 {
    width: 100%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    width: calc((100% - 4 * 15px) / 2);
  }

  .c0 img {
    height: 226px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    width: calc((100% - 8 * 15px) / 4);
  }

  .c0 img {
    height: 175px;
  }
}

<body>
    <div>
      <li
        class="c0"
      >
        <img />
        <div
          class="c1"
        >
          <h2 />
          <p>
            Price: 
            <span>
               
              $
            </span>
          </p>
          <div
            class="c2"
          >
            <p>
              Amount:
            </p>
            <button
              type="button"
            >
              -
            </button>
            <span
              data-testid="value"
            >
              1
            </span>
            <button
              type="button"
            >
              +
            </button>
          </div>
          <div
            class="c3"
          >
            <button
              class="c4"
              type="button"
            >
              Add
            </button>
          </div>
        </div>
      </li>
    </div>
  </body>,
  "container": .c4 {
  background-color: #6b068a;
  padding: 5px 27px;
  font-size: 16px;
  line-height: 19px;
  color: #ffffff;
  border-radius: 15px;
  font-size: 24px;
  line-height: 28px;
  border: none;
  outline: none;
  cursor: pointer;
}

.c4.login {
  padding: 9px 51px;
}

.c4:disabled {
  opacity: 0.7;
}

.c4:hover {
  background-color: #c913d6;
}

.c4.categories {
  margin-bottom: 12px;
  padding: 4px 12px;
  margin-right: 12px;
}

.c4.cardItem {
  font-size: 16px;
  line-height: 19px;
  padding: 5px 27px;
}

.c4.order {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.goToOrder {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 13px 54px;
  font-weight: 600;
}

.c0 {
  margin: 15px;
  background-color: #fff;
  box-shadow: 0px 2px 1px rgb(0 0 0 / 20%),0px 1px 1px rgb(0 0 0 / 14%), 0px 1px 3px rgb(0 0 0 / 12%);
  border-radius: 0px 0px 4px 4px;
  margin-left: auto;
  margin-right: auto;
}

.c0 img {
  width: 100%;
  object-fit: contain;
}

.c1 {
  padding: 20px 20px;
}

.c1 h2 {
  font-weight: 600;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 20px;
}

.c1 p {
  margin-bottom: 20px;
  font-size: 20px;
  line-height: 23px;
  font-weight: 600;
}

.c1 p span {
  font-weight: 400;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

.c2 button {
  background-color: #6b068a;
  height: 20px;
  width: 20px;
  outline: none;
  border: none;
  border-radius: 5px;
  color: white;
}

.c2 p {
  margin: 0 12px 0 0;
}

.c2 span {
  margin-right: 3px;
  margin-left: 3px;
}

.c3 {
  text-align: right;
}

@media screen and (min-width:768px) {
  .c4.categories {
    padding: 8px 23px;
    margin-right: 24px;
  }
}

@media screen and (min-width:320px) {
  .c0 {
    width: 100%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    width: calc((100% - 4 * 15px) / 2);
  }

  .c0 img {
    height: 226px;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    width: calc((100% - 8 * 15px) / 4);
  }

  .c0 img {
    height: 175px;
  }
}

<div>
    <li
      class="c0"
    >
      <img />
      <div
        class="c1"
      >
        <h2 />
        <p>
          Price: 
          <span>
             
            $
          </span>
        </p>
        <div
          class="c2"
        >
          <p>
            Amount:
          </p>
          <button
            type="button"
          >
            -
          </button>
          <span
            data-testid="value"
          >
            1
          </span>
          <button
            type="button"
          >
            +
          </button>
        </div>
        <div
          class="c3"
        >
          <button
            class="c4"
            type="button"
          >
            Add
          </button>
        </div>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
